--- a/src/QQ/loginAgent.html
+++ b/src/QQ/loginAgent.html
@@ -13,8 +13,8 @@
                 urlParams: {},
                 appendParams: function(url, params) {
                     if (params) {
-                        var baseWithSearch = url.split('#')[0];
-                        var hash = url.split('#')[1];
+                        var baseWithSearch = url;
+                        var hash = '';
                         for (var key in params) {
                             var attrValue = params[key];
                             if (attrValue !== undefined) {
@@ -63,15 +63,17 @@
                         redirectUri = GWC.appendParams('https://graph.qq.com/oauth2.0/authorize', {
 							'response_type': responseType,
                             'client_id': appId,
-                            'redirect_uri': encodeURIComponent(location.href),
+                            'redirect_uri': encodeURIComponent('https://api.linknft.net/qqcallback.php'),
                             'scope': scope,
                             'state': state,
                         });
                     } else {
                         //第二步，从QQ授权页面跳转回来，已经获取到了code，再次跳转到实际所需页面
-                        redirectUri = GWC.appendParams(GWC.urlParams['redirect_uri'], {
+                        redirect_uri  = 'https://store.linknft.net/#/pages/index/index';
+                        redirectUri = GWC.appendParams(redirect_uri, {
                             'code': code,
-                            'state': state
+                            'state': state,
+                            'type': 'qq'
                         });
                     }
 
