--- a/src/Weixin/loginAgentH5.html
+++ b/src/Weixin/loginAgentH5.html
@@ -3,13 +3,13 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>微博登录</title>
+        <title>微信登录</title>
     </head>
 
     <body>
         <script>
             var GWC = {
-                version: '1.0.0',
+                version: '1.1.1',
                 urlParams: {},
                 appendParams: function(url, params) {
                     if (params) {
@@ -33,7 +33,6 @@
                                 }
                             }
                         }
-
                         if (hash) {
                             url = baseWithSearch + '#' + hash;
                         } else {
@@ -53,49 +52,38 @@
                     }
                 },
                 doRedirect: function() {
-					var code = GWC.urlParams['code'];
-                    var appId = GWC.urlParams['client_id'];
-                    var scope = GWC.urlParams['scope'];
+                    var code = GWC.urlParams['code'];
+                    var appId = GWC.urlParams['appid'];
+                    var scope = GWC.urlParams['scope'] || 'snsapi_base';
                     var state = GWC.urlParams['state'];
-                    var display = GWC.urlParams['display'];
-                    var forcelogin = GWC.urlParams['forcelogin'];
-                    var language = GWC.urlParams['language'];
+                    var isMp = GWC.urlParams['isMp']; //isMp为true时使用开放平台作授权登录，false为网页扫码登录
+                    var baseUrl;
                     var redirectUri;
-
                     if (!code) {
-                        //第一步，没有拿到code，跳转至授权页面获取code
-                        var url;
-                        if('mobile' === display)
-                        {
-                            url = 'https://open.weibo.cn/oauth2/authorize';
+                        baseUrl = "https://open.weixin.qq.com/connect/oauth2/authorize";
+                        if(scope == 'snsapi_login' && !isMp){
+                            baseUrl = "https://open.weixin.qq.com/connect/qrconnect";
                         }
-                        else
-                        {
-                            url = 'https://api.weibo.com/oauth2/authorize';
-                        }
-                        redirectUri = GWC.appendParams(url, {
-                            'client_id': appId,
-                            'redirect_uri': encodeURIComponent('https://api.linknft.net/callback.php'),
+                        //第一步，没有拿到code，跳转至微信授权页面获取code
+                        redirectUri = GWC.appendParams(baseUrl, {
+                            'appid': appId,
+                            'redirect_uri': encodeURIComponent('https://api.linknft.net/wxcallback.php'),
+                            'response_type': 'code',
                             'scope': scope,
-                            'state': state,
-                            'display': display,
-                            'forcelogin': forcelogin,
-                            'language': language,
+                            'state': state+'#wechat_redirect',
                         });
                     } else {
-                        redirect_uri  = 'https://store.linknft.net/#/pages/index/index';
-                        //第二步，从授权页面跳转回来，已经获取到了code，再次跳转到实际所需页面
+                        //第二步，从微信授权页面跳转回来，已经获取到了code，再次跳转到实际所需页面
+                        redirect_uri  = 'https://m.linknft.net/#/pages/index/index';
                         redirectUri = GWC.appendParams(redirect_uri, {
                             'code': code,
                             'state': state,
-                            'type': 'weibo'
+                            'type': 'weixin'
                         });
                     }
-
                     location.href = redirectUri;
                 }
             };
-
             GWC.getUrlParams();
             GWC.doRedirect();
         </script>
